# sht21_ph

./: .gitignore  CMakeLists.txt  README.md
src/executables/: CMakeLists.txt
src/executables/pico-ph/: CMakeLists.txt  config.h  main.c
src/executables/pico-pwm/: CMakeLists.txt  main.c
src/executables/pico-sht21/: CMakeLists.txt  main.c
src/lib/motor/: CMakeLists.txt  motor_driver.c  motor_driver.h
src/lib/ph_driver/: CMakeLists.txt  ph_driver.c  ph_driver.h
src/lib/sht21/: CMakeLists.txt  sht21.c  sht21.h
src/lorawan/: lorawan.c
src/lorawan/boards/rp2040/: gpio-board.c
src/lorawan/include/pico/: lorawan.h
